# tursim

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml  main.yml
src/: Router.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: logo.tsx  mode-toggle.tsx
src/components/layouts/: AppLayout.tsx  Footer.tsx  Header.tsx
src/components/ui/: accordion.tsx  dialog.tsx  dropdown-menu.tsx
src/config/: app.ts
src/lib/: constants.ts  db.ts  encodings.ts  layout.ts  utils.ts
src/pages/machine/: EncodingDialog.tsx  SaveDialog.tsx  ToolButton.tsx  TuringEdge.tsx  TuringNode.tsx  TuringNodeStyles.css  machine.tsx  useMachine.tsx
